panfrost massive glitches apitrace opengl 2.1
Hi, I would like to share you guys another apitrace, I dont know if it's related to my last report.
it was Neverwinter Nights Diamond (Linux x86) over BOX86
2.1 Mesa 20.3.0-devel (git-fb1793bf 2020-11-08 focal-oibaf-ppa)
https://drive.google.com/file/d/1GepL2DgZywueBsvKWdHMC2fnSUpoL4mu/view?usp=sharing
also, you can check my last panfrost testing on box86 here https://www.youtube.com/watch?v=TzdUhT6z8r8&t=579s